--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE <html>
 
 <head>
-        <title>Marie Lenac</title>
+    <title>Gatjuat W Riek</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 
@@ -13,7 +13,7 @@
 
     <div class="head">
         <div class="name">
-            <h2>Marie Lenac</h2>
+            <h2>Gatjuat Wicteat Riek</h2>
         </div>
 
 
@@ -30,12 +30,12 @@
     <div class="main-area">
 
         <div class="about-me">
-             <h1>About Me</h1>
+        <h1>About Me</h1>
         </div>
 
 
         <div class="headshot">
-            <img src="../week1-HW-portfolio/assets/Images/IMG_20190714_184339 (1).jpg"
+            <img src="../week1-HW-portfolio/assets/Images/.jpg"
                 alt="My face">
         </div>
 
